<resources>
    <string name="app_name">Eroda D20 Sheet</string>
    <string name="char_noteblook_title">Anotações</string>
    <string name="char_inventory_title">Inventário</string>
    <string name="char_combate_title">Combate</string>
    <string name="char_stats_title">Atributos</string>
    <string name="char_info_title">Informações</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_char_select">CharSelectActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>